--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Imaria",
+  "name": "mobile",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -13,6 +13,11 @@
     "axios": "^0.19.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-gesture-handler": "^1.6.0",
+    "react-native-paper": "^3.6.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.2.1",
+    "react-navigation-material-bottom-tabs": "^2.2.1",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5"
   },
@@ -21,7 +26,11 @@
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^0.0.7",
     "babel-jest": "^25.1.0",
-    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.58.0",
     "react-test-renderer": "16.9.0"
